@@ -1,3 +1,11 @@
+2012-10-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	Fixes for z/OS from Dave Pitts.
+
+	* awk.h (assoc_list_flags): No trailing comma on last enum value.
+	* gawkapi.h (awk_valtype_t): Ditto.
+	* symbol.c (lookup): ``No automatic aggregate initialization.'' Sigh.
+
 2012-10-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	If SYMTAB is used, make sure ENVIRON and PROCINFO get loaded too.
